HPCC-34811 Remove extra builds from candidate-2.0.x tags
Signed-off-by: Michael Gardner <michael.gardner@lexisnexisrisk.com>

--- a/.github/workflows/build-assets.yml
+++ b/.github/workflows/build-assets.yml
@@ -102,6 +102,7 @@ jobs:
     permissions:
       contents: write
       actions: write
+    if: ${{ !contains(github.ref, 'community_2.') }}
     strategy:
       matrix:
         os: [ ubuntu-24.04, ubuntu-22.04, ubuntu-20.04, rockylinux-8 ]
@@ -138,8 +139,8 @@ jobs:
       actions: write
     strategy:
       matrix:
-        os: [ ubuntu-24.04, ubuntu-22.04, ubuntu-20.04, rockylinux-8, centos-7 ]
-        container: [ true, false ]
+        os: [ ubuntu-22.04 ]
+        container: [ false ]
         build-docker-image: [ false ]
         architecture: [ "", "-arm" ]
         include:
@@ -173,6 +174,7 @@ jobs:
     permissions:
       contents: read
       actions: write
+    if: ${{ !contains(github.ref, 'community_2.') }}
     strategy:
       matrix:
         os: [ ubuntu-24.04, ubuntu-22.04 ]
@@ -189,6 +191,7 @@ jobs:
     permissions:
       contents: write
       actions: write
+    if: ${{ !contains(github.ref, 'community_2.') }}
     uses: ./.github/workflows/build-documentation.yml
     with:
       community-ref: ${{ needs.preamble.outputs.community_ref }}
@@ -211,6 +214,7 @@ jobs:
       matrix:
         cmake-config-options: [ "-DCMAKE_OSX_ARCHITECTURES=x86_64 -DCPACK_SYSTEM_NAME=Darwin-x86_64 -DUSE_PYTHON3=OFF", "" ]
       fail-fast: false
+    if: ${{ !contains(github.ref, 'community_2.') }}
     uses: ./.github/workflows/build-clienttools-macos-14.yml
     with:
       community-ref: ${{ needs.preamble.outputs.community_ref }}
@@ -228,6 +232,7 @@ jobs:
       matrix:
         cmake-config-options: [ "-DCMAKE_OSX_ARCHITECTURES=x86_64 -DCPACK_SYSTEM_NAME=Darwin-x86_64 -DUSE_PYTHON3=OFF", "" ]
       fail-fast: false
+    if: ${{ !contains(github.ref, 'community_2.') }}
     uses: ./.github/workflows/build-clienttools-macos-14.yml
     with:
       community-ref: ${{ needs.preamble.outputs.community_ref }}
@@ -242,6 +247,7 @@ jobs:
       contents: write
       actions: write
       packages: read
+    if: ${{ !contains(github.ref, 'community_2.') }}
     uses: ./.github/workflows/build-clienttools-windows-2022.yml
     with:
       community-ref: ${{ needs.preamble.outputs.community_ref }}
@@ -256,6 +262,7 @@ jobs:
       contents: read
       actions: write
       packages: read
+    if: ${{ !contains(github.ref, 'community_2.') }}
     uses: ./.github/workflows/build-clienttools-windows-2022.yml
     with:
       community-ref: ${{ needs.preamble.outputs.community_ref }}
@@ -271,6 +278,7 @@ jobs:
       contents: write
       actions: write
       packages: read
+    if: ${{ !contains(github.ref, 'community_2.') }}
     uses: ./.github/workflows/build-eclide.yml
     with:
       community-ref: ${{ needs.preamble.outputs.community_ref }}
@@ -285,6 +293,7 @@ jobs:
     needs: preamble
     permissions:
       contents: write
+    if: ${{ !contains(github.ref, 'community_2.') }}
     uses: ./.github/workflows/build-changelogs.yml
     with:
       current-version: ${{ needs.preamble.outputs.hpcc_version_full }}
